Changes for 2.10.0